--- a/src/main.css
+++ b/src/main.css
@@ -8,16 +8,63 @@ form {
     padding: 20px;
 }
 
-nav{
+.logo h4 {
+    font-size: 30px;
+    font-weight: bolder;
+}
+
+nav {
     background-color: #001247;
     color: white;
-    display: "flex";
+    display: flex;
     justify-content: space-between;
     padding: 20px;
 }
 
- ul{
+nav ul {
     display: flex;
     list-style: none;
-    gap: 2px;
+    gap: 20px;
+}
+
+li button {
+    background-color: #809FFF;
+    padding: 10px;
+    color: white;
+    border: none;
+    border-radius: 5px;
+}
+
+.accessibility ul {
+    display: flex;
+
+}
+
+.left-div {
+    position: absolute;
+    width: 79px;
+    height: 868px;
+    left: 0px;
+    top: 80px;
+    background: #001247;
+}
+
+.icon-container {
+    width: 52px;
+    height: 47px;
+    left: 14px;
+    background: #FFFFFF;
+    border-radius: 5px;
+    margin: 15px;
+}
+
+.big-left-nav {
+    box-sizing: border-box;
+    position: absolute;
+    width: 270px;
+    height: 819px;
+    left: 80px;
+    top: 86px;
+    background: #FFFFFF;
+    border-right: 1px solid rgba(139, 136, 136, 0.25);
 }
